--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -5,10 +5,10 @@
   <mat-card-content>
     <form>
       <mat-form-field>
-        <input matInput [(ngModel)]="userCred.username" placeholder="Username" type="text" name="Username" required>
+        <input matInput [(ngModel)]="userCred.Username" placeholder="Username" type="text" name="Username" required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput [(ngModel)]="userCred.password" type="password" placeholder="Password" name="Password" required>
+        <input matInput [(ngModel)]="userCred.Password" type="password" placeholder="Password" name="Password" required>
       </mat-form-field>
     </form>
   </mat-card-content>
