--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,12 +1,11 @@
-<div class="welcome-page">
+<div class="main-page">
   <h1>
     Welcome to billFold!
   </h1>
-
   <button mat-raised-button (click)="openUserRegistrationDialog()" style="margin-right: 10px;" color="primary">
     Sign Up
   </button>
-  <button mat-raised-button (click)="openUserLoginDialog()" style="margin-right: 10px;">
+  <button mat-raised-button color="primary" (click)="openUserLoginDialog()" style="margin-right: 10px;">
     Login
   </button>
 </div>
