check data displayed

--- a/src/app/expenses-page/expenses-page.component.html
+++ b/src/app/expenses-page/expenses-page.component.html
@@ -1,1 +1,6 @@
 <p>expenses-page works!</p>
+
+<div *ngFor="let expense of expenses">
+  <p>{{expense.Date}}</p>
+  <p>{{expense.Amount.$numberDecimal}}</p>
+</div>
