--- a/src/app/expenses-page/expenses-page.component.html
+++ b/src/app/expenses-page/expenses-page.component.html
@@ -1,6 +1,14 @@
 <p>expenses-page works!</p>
+<button mat-raised-button color="primary" (click)="openCreateExpenseDialog()" style="margin-right: 10px;">
+  +
+</button>
 
 <div *ngFor="let expense of expenses">
   <p>{{expense.Date}}</p>
   <p>{{expense.Amount.$numberDecimal}}</p>
+  <button mat-raised-button color="primary" (click)="openEditExpenseDialog(expense)" style="margin-right: 10px;">
+    Edit
+  </button>
+
+
 </div>
