--- a/src/app/expense-create/expense-create.component.html
+++ b/src/app/expense-create/expense-create.component.html
@@ -1,1 +1,39 @@
 <p>expense-create works!</p>
+
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Add Expense</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form>
+      <mat-form-field>
+        <input matInput [(ngModel)]="expenseInfo.Category" placeholder="Category" type="text" name="Category" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="expenseInfo.Description" placeholder="Description" type="text" name="Description"
+               required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="expenseInfo.Date" placeholder="Date" type="Date" name="Date" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="expenseInfo.Amount" type="number" placeholder="00.00" name="Amount" required>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Currency Preference</mat-label>
+        <mat-select matNativeControl [(ngModel)]="expenseInfo.Currency" type="text" placeholder="CAD"
+                    name="CurrencyPref">
+          <mat-option value="CAD">CAD</mat-option>
+          <mat-option value="USD">USD</mat-option>
+          <mat-option value="GBP">GBP</mat-option>
+          <mat-option value="EUR">EUR</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button (click)="createExpense(token, userId)" color="primary">
+      Create Expense
+    </button>
+  </mat-card-actions>
+</mat-card>
