--- a/src/app/bill-create/bill-create.component.html
+++ b/src/app/bill-create/bill-create.component.html
@@ -1,1 +1,37 @@
 <p>bill-create works!</p>
+
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Add Bill</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form>
+      <mat-form-field>
+        <input matInput [(ngModel)]="billInfo.Description" placeholder="Description" type="text" name="Description"
+               required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="billInfo.Date" placeholder={{data.date}} type="Date" name="Date"
+               required>{{data.date}}
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="billInfo.Amount" type="number" placeholder="00.00" name="Amount" required>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Currency Preference</mat-label>
+        <mat-select matNativeControl [(ngModel)]="billInfo.Currency" type="text" placeholder="CAD" name="CurrencyPref">
+          <mat-option value="CAD">CAD</mat-option>
+          <mat-option value="USD">USD</mat-option>
+          <mat-option value="GBP">GBP</mat-option>
+          <mat-option value="EUR">EUR</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-checkbox [checked]="isChkChecked" (change)="onChkChange($event)"> Paid </mat-checkbox>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button (click)="createBill(token, userId)" color="primary">
+      Add Bill
+    </button>
+  </mat-card-actions>
+</mat-card>
