--- a/src/app/expense-create/expense-create.component.html
+++ b/src/app/expense-create/expense-create.component.html
@@ -21,8 +21,7 @@
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Currency Preference</mat-label>
-        <mat-select matNativeControl [(ngModel)]="expenseInfo.Currency" type="text" placeholder="CAD"
-                    name="CurrencyPref">
+        <mat-select matNativeControl [(ngModel)]="expenseInfo.Currency" type="text" placeholder="CAD" name="Currency">
           <mat-option value="CAD">CAD</mat-option>
           <mat-option value="USD">USD</mat-option>
           <mat-option value="GBP">GBP</mat-option>
