--- a/src/app/bill-details/bill-details.component.html
+++ b/src/app/bill-details/bill-details.component.html
@@ -1,3 +1,12 @@
 <p>bill-details works!</p>
+<mat-card>
+  <p>Desc: {{data.Paid}}</p>
 
-<p>Desc: {{data.title}}</p>
+  <mat-checkbox [checked]="isChkChecked" (change)="onChkChange($event)"> Paid </mat-checkbox>
+
+  <mat-card-actions>
+    <button mat-raised-button (click)="editBill(userId, token)" color="primary">
+      Save Changes
+    </button>
+  </mat-card-actions>
+</mat-card>
