--- a/src/app/expenses-page/expenses-page.component.html
+++ b/src/app/expenses-page/expenses-page.component.html
@@ -5,7 +5,7 @@
 
 
 <p-panel header="Expenses" class=ui-g-6 ui-md-6>
-  <p-chart type="line" [data]="userData"></p-chart>
+  <p-chart type="line" [data]="userData" [options]="basicOptions"></p-chart>
 </p-panel>
 
 <!-- <canvas></canvas> -->
