expenseEdit - amount.$numberDecimal

--- a/src/app/expense-edit/expense-edit.component.html
+++ b/src/app/expense-edit/expense-edit.component.html
@@ -17,7 +17,7 @@
         <input matInput [(ngModel)]="data.Date" placeholder="Date" type="Date" name="Date" required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput [(ngModel)]="data.Amount" type="number" placeholder="" name="Amount" required>
+        <input matInput [(ngModel)]="data.Amount.$numberDecimal" type="number" placeholder="" name="Amount" required>
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Currency Preference</mat-label>
