--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,1 +1,20 @@
 <p>user-profile works!</p>
+
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>
+      {{userData.Username}} Profile
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>First Name: <span>{{userData.FirstName}}</span></p>
+    <!-- <button onClick="updateUser(userData, token, userId)"></button> -->
+
+    <p>Last Name: <span>{{userData.LastName}}</span></p>
+    <p>Username: <span>{{userData.Username}}</span></p>
+    <p>Email: <span>{{userData.Email}}</span></p>
+    <p>Password: <input type="password" [(ngModel)]="userData.Password"></p>
+    <p>Currency: <span>{{userData.CurrencyPref}}</span></p>
+
+  </mat-card-content>
+</mat-card>
