--- a/src/app/user-profile-update/user-profile-update.component.html
+++ b/src/app/user-profile-update/user-profile-update.component.html
@@ -1,1 +1,39 @@
 <p>user-profile-update works!</p>
+<!-- {{data.Username}} -->
+{{data.Email}}
+
+<mat-card>
+  <mat-card-header class="updatetitle">
+    <mat-card-title class="updatetitle">Update Profile</mat-card-title>
+  </mat-card-header>
+  <mat-card-content class="updateform">
+    <form>
+      <mat-form-field class="formtext">
+        <input class="formtext" matInput [(ngModel)]="userData.FirstName" placeholder={{data.FirstName}} type="text"
+               name="FirstName" required>
+      </mat-form-field>
+      <mat-form-field class="formtext">
+        <input class="formtext" matInput [(ngModel)]="userData.LastName" placeholder={{data.LastName}} type="text"
+               name="LastName" required>
+      </mat-form-field>
+      <mat-form-field class="formtext">
+        <input class="formtext" matInput [(ngModel)]="userData.Username" placeholder="Username" type="text"
+               name="Username" required>
+      </mat-form-field>
+      <mat-form-field class="formtext">
+        <input class="formtext" matInput [(ngModel)]="userData.Password" type="password" placeholder="Password"
+               name="Password" required>
+      </mat-form-field>
+      <mat-form-field class="formtext">
+        <input class="formtext" matInput [(ngModel)]="userData.Email" type="email" placeholder={{data.Email}}
+               name="Email" required>
+      </mat-form-field>
+
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button class="updatebtn" mat-raised-button (click)="updateUser(token, userId)" color="primary">
+      Confirm
+    </button>
+  </mat-card-actions>
+</mat-card>
