password update + show/hide

--- a/src/app/user-update-password/user-update-password.component.html
+++ b/src/app/user-update-password/user-update-password.component.html
@@ -1,1 +1,17 @@
 <p>user-update-password works!</p>
+
+
+<!-- <mat-form-field>
+  <input matInput [(ngModel)]="userData.Password" placeholder={{data.Password}} type="text" name="Password" required>
+</mat-form-field> -->
+<mat-form-field>
+  <input matInput [(ngModel)]="userData.Password" placeholder="Enter new password" [type]="hide ? 'password' : 'text'"
+         formControlName="password" required>
+  <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+</mat-form-field>
+
+<mat-card-actions>
+  <button mat-raised-button (click)="updateUser(token, userId)" color="primary">
+    Change Password
+  </button>
+</mat-card-actions>
