--- a/src/app/expense-create/expense-create.component.html
+++ b/src/app/expense-create/expense-create.component.html
@@ -7,27 +7,43 @@
   <mat-card-content>
     <form>
       <mat-form-field>
-        <input matInput [(ngModel)]="expenseInfo.Category" placeholder="Category" type="text" name="Category" required>
+        <mat-label>Category</mat-label>
+        <mat-select matNativeControl [(ngModel)]="expenseInfo.Category" type="text" placeholder="Groceries" required
+                    name="Category">
+
+          <mat-option value="Activities">Activities</mat-option>
+          <mat-option value="Bills">Bills</mat-option>
+          <mat-option value="Business">Business</mat-option>
+          <mat-option value="Entertainment">Entertainment</mat-option>
+          <mat-option value="Gifts">Gifts</mat-option>
+          <mat-option value="Groceries">Groceries</mat-option>
+          <mat-option value="Home">Home</mat-option>
+          <mat-option value="Medical">Medical</mat-option>
+          <mat-option value="Restaurant">Restaurant</mat-option>
+          <mat-option value="Travel">Travel/Commute</mat-option>
+
+        </mat-select>
+
       </mat-form-field>
       <mat-form-field>
         <input matInput [(ngModel)]="expenseInfo.Description" placeholder="Description" type="text" name="Description"
                required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput [(ngModel)]="expenseInfo.Date" placeholder="Date" type="Date" name="Date" required>
+        <input matInput [(ngModel)]="expenseInfo.Date" placeholder="" type="Date" name="Date" required>
       </mat-form-field>
       <mat-form-field>
         <input matInput [(ngModel)]="expenseInfo.Amount" type="number" placeholder="00.00" name="Amount" required>
-      </mat-form-field>
-      <mat-form-field appearance="fill">
-        <mat-label>Currency Preference</mat-label>
-        <mat-select matNativeControl [(ngModel)]="expenseInfo.Currency" type="text" placeholder="CAD" name="Currency">
+      </mat-form-field><span>({{data.CurrencyPref}})</span>
+      <!-- <mat-form-field appearance="fill">
+        <mat-select matNativeControl [(ngModel)]="expenseInfo.Currency" type="text" name="Currency"
+                    placeholder={{data.CurrencyPref}}>
           <mat-option value="CAD">CAD</mat-option>
           <mat-option value="USD">USD</mat-option>
           <mat-option value="GBP">GBP</mat-option>
           <mat-option value="EUR">EUR</mat-option>
         </mat-select>
-      </mat-form-field>
+      </mat-form-field> -->
     </form>
   </mat-card-content>
   <mat-card-actions>
