add current month name to header

--- a/src/app/expenses-page/expenses-page.component.html
+++ b/src/app/expenses-page/expenses-page.component.html
@@ -4,7 +4,7 @@
 </button>
 
 
-<p-panel header="Expenses" class=ui-g-6 ui-md-6>
+<p-panel header="{{currentMonth}} Expenses" class=ui-g-6 ui-md-6>
   <p-chart type="line" [data]="userData" [options]="basicOptions"></p-chart>
 </p-panel>
 
