remove hint label underneath

--- a/src/app/bill-create/bill-create.component.html
+++ b/src/app/bill-create/bill-create.component.html
@@ -11,8 +11,8 @@
                required>
       </mat-form-field>
 
-      <mat-form-field hintLabel="Date">
-        <input matInput name="Date" placeholder={{data.date}} value={{data.date}} [(ngModel)]="billInfo.Date" readonly>
+      <mat-form-field>
+        <input matInput name="Date" placeholder="Date" value={{data.date}} [(ngModel)]="billInfo.Date" readonly>
       </mat-form-field>
 
       <mat-form-field>
