--- a/src/app/expense-create/expense-create.component.html
+++ b/src/app/expense-create/expense-create.component.html
@@ -8,19 +8,19 @@
     <form>
       <mat-form-field>
         <mat-label>Category</mat-label>
-        <mat-select matNativeControl [(ngModel)]="expenseInfo.Category" type="text" placeholder="Groceries" required
+        <mat-select matNativeControl [(ngModel)]="expenseInfo.Category" type="text" placeholder="Food" required
                     name="Category">
 
-          <mat-option value="Activities">Activities</mat-option>
+          <mat-option value="Housing">Housing</mat-option>
           <mat-option value="Bills">Bills</mat-option>
-          <mat-option value="Business">Business</mat-option>
+          <mat-option value="Food">Food</mat-option>
           <mat-option value="Entertainment">Entertainment</mat-option>
-          <mat-option value="Gifts">Gifts</mat-option>
-          <mat-option value="Groceries">Groceries</mat-option>
-          <mat-option value="Home">Home</mat-option>
+          <mat-option value="Personal">Personal Spending</mat-option>
+          <mat-option value="Savings">Savings</mat-option>
+          <mat-option value="Transportation">Transportation</mat-option>
           <mat-option value="Medical">Medical</mat-option>
-          <mat-option value="Restaurant">Restaurant</mat-option>
-          <mat-option value="Travel">Travel/Commute</mat-option>
+          <mat-option value="Savings">Savings</mat-option>
+          <mat-option value="Micellaneous">Micellaneous</mat-option>
 
         </mat-select>
 
@@ -30,20 +30,12 @@
                required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput [(ngModel)]="expenseInfo.Date" placeholder="" type="Date" name="Date" required>
+        <!-- <input matInput [(ngModel)]="expenseInfo.Date" type="Date" name="Date" placeholder={{todayDate}} required> -->
+        <input matInput [(ngModel)]="expenseInfo.Date" name="Date" placeholder="" type="Date">
       </mat-form-field>
       <mat-form-field>
         <input matInput [(ngModel)]="expenseInfo.Amount" type="number" placeholder="00.00" name="Amount" required>
-      </mat-form-field><span>({{data.CurrencyPref}})</span>
-      <!-- <mat-form-field appearance="fill">
-        <mat-select matNativeControl [(ngModel)]="expenseInfo.Currency" type="text" name="Currency"
-                    placeholder={{data.CurrencyPref}}>
-          <mat-option value="CAD">CAD</mat-option>
-          <mat-option value="USD">USD</mat-option>
-          <mat-option value="GBP">GBP</mat-option>
-          <mat-option value="EUR">EUR</mat-option>
-        </mat-select>
-      </mat-form-field> -->
+      </mat-form-field><span>({{data.user.CurrencyPref}})</span>
     </form>
   </mat-card-content>
   <mat-card-actions>
