--- a/src/app/expenses-page/expenses-page.component.html
+++ b/src/app/expenses-page/expenses-page.component.html
@@ -1,24 +1,39 @@
 <p>expenses-page works!</p>
-<button mat-raised-button color="primary" (click)="openCreateExpenseDialog()" style="margin-right: 10px;">
-  +
-</button>
+
+<div class="demo-app">
+
+  <div class='demo-app-sidebar'>
+    <div class='demo-app-sidebar-section'>
+      <li *ngFor="let expense of cmExpenses">
+        <p>{{expense.Date}}</p>
+        <p>{{expense.Amount}}</p>
+        <button mat-raised-button color="primary" (click)="openEditExpenseDialog(expense)" style="margin-right: 10px;">
+          Edit
+        </button>
+
+      </li>
+
+    </div>
 
 
-<p-panel header="{{currentMonth}} Expenses" class=ui-g-6 ui-md-6>
-  <p-chart type="line" [data]="userData" [options]="basicOptions"></p-chart>
-</p-panel>
-
-<!-- <canvas></canvas> -->
-
-
+  </div>
+  <div class='demo-app-main'>
+    <button mat-raised-button color="primary" (click)="openCreateExpenseDialog()" style="margin-right: 10px;">
+      +
+    </button>
 
 
-<div *ngFor="let expense of expenses">
-  <p>{{expense.Date}}</p>
-  <p>{{expense.Amount}}</p>
-  <button mat-raised-button color="primary" (click)="openEditExpenseDialog(expense)" style="margin-right: 10px;">
-    Edit
-  </button>
+    <p-panel header="{{currentMonth}} Expenses" class=ui-g-6 ui-md-6>
+      <p-chart type="line" [data]="userData" [options]="basicOptions"></p-chart>
+    </p-panel>
+
+  </div>
+
+
+  <!-- <canvas></canvas> -->
+
+
+
 
 
 </div>
