remove edit whole user button

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -34,7 +34,7 @@
     <mat-divider></mat-divider>
 
     <mat-card-actions>
-      <button mat-raised-button color="primary" (click)="openUpdateDialog(user)">Edit Profile</button>
+      <!-- <button mat-raised-button color="primary" (click)="openUpdateDialog(user)">Edit Profile</button> -->
       <button mat-raised-button color="warn" (click)="openDeleteDialog()">Delete Profile</button>
     </mat-card-actions>
 
