--- a/src/app/user-profile-delete/user-profile-delete.component.html
+++ b/src/app/user-profile-delete/user-profile-delete.component.html
@@ -1,1 +1,13 @@
 <p>user-profile-delete works!</p>
+
+<div class="delete-container">
+  <mat-card class="deletecard">
+    <h3 class="deletetitle" mat-dialog-title>Are you sure that you want to delete your account?</h3>
+    <div class="actionbtns">
+      <mat-dialog-actions class="actionbtns">
+        <button mat-raised-button class="cancelbtn" (click)="cancel()">Cancel</button>
+        <button mat-stroked-button class="deletebtn" (click)="deleteUserAccount(token, userId)">Delete Account</button>
+      </mat-dialog-actions>
+    </div>
+  </mat-card>
+</div>
