--- a/src/app/bill-delete/bill-delete.component.html
+++ b/src/app/bill-delete/bill-delete.component.html
@@ -1,3 +1,15 @@
 <p>bill-delete works!</p>
 
 <p>Date: {{billInfo.Date}}</p>
+
+<div class="delete-container">
+  <mat-card class="deletecard">
+    <h3 class="deletetitle" mat-dialog-title>Are you sure that you want to delete this bill?</h3>
+    <div class="actionbtns">
+      <mat-dialog-actions class="actionbtns">
+        <button mat-raised-button class="cancelbtn" (click)="cancel()">Cancel</button>
+        <button mat-stroked-button class="deletebtn" (click)="deleteBill(billId, token)">Delete Bill</button>
+      </mat-dialog-actions>
+    </div>
+  </mat-card>
+</div>
