--- a/src/app/expense-edit/expense-edit.component.html
+++ b/src/app/expense-edit/expense-edit.component.html
@@ -7,21 +7,22 @@
   <mat-card-content>
     <form>
       <mat-form-field>
-        <input matInput [(ngModel)]="data.Category" placeholder="Category" type="text" name="Category" required>
+        <input matInput [(ngModel)]="expenseInfo.Category" placeholder="Category" type="text" name="Category" required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput [(ngModel)]="data.Description" placeholder="Description" type="text" name="Description"
+        <input matInput [(ngModel)]="expenseInfo.Description" placeholder="Description" type="text" name="Description"
                required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput [(ngModel)]="data.Date" placeholder="Date" type="Date" name="Date" required>
+        <input matInput [(ngModel)]="expenseInfo.Date" placeholder="Date" type="Date" name="Date" required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput [(ngModel)]="data.Amount" type="number" placeholder="" name="Amount" required>
+        <input matInput [(ngModel)]="expenseInfo.Amount" type="number" placeholder={{data.Amount}} name="Amount"
+               required>
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Currency Preference</mat-label>
-        <mat-select matNativeControl [(ngModel)]="data.Currency" type="text" placeholder="CAD" name="Currency">
+        <mat-select matNativeControl [(ngModel)]="expenseInfo.Currency" type="text" placeholder="CAD" name="Currency">
           <mat-option value="CAD">CAD</mat-option>
           <mat-option value="USD">USD</mat-option>
           <mat-option value="GBP">GBP</mat-option>
