--- a/src/app/expenses-page/expenses-page.component.html
+++ b/src/app/expenses-page/expenses-page.component.html
@@ -5,8 +5,10 @@
   <div class='demo-app-sidebar'>
     <div class='demo-app-sidebar-section'>
       <li *ngFor="let expense of cmExpenses">
-        <p>{{expense.Date}}</p>
-        <p>{{expense.Amount}}</p>
+        <div (click)="openDeleteExpenseDialog(expense)">
+          <p>{{expense.Date}}</p>
+          <p>{{expense.Amount}}</p>
+        </div>
         <button mat-raised-button color="primary" (click)="openEditExpenseDialog(expense)" style="margin-right: 10px;">
           Edit
         </button>
