set app bg color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,5 +36,5 @@ $billFold-client-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {  background-color: #ebecef ; height: 100%; }
+body {  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
