--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -1,43 +1,94 @@
 <!-- <p>user-registration-form works!</p> -->
+<div id="regsiterCard">
 
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Sign Up!</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <form>
-      <mat-form-field>
-        <input matInput [(ngModel)]="userDetails.FirstName" placeholder="First Name" type="text" name="FirstName"
-               required>
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput [(ngModel)]="userDetails.LastName" placeholder="Last Name" type="text" name="LastName" required>
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput [(ngModel)]="userDetails.Username" placeholder="Username" type="text" name="Username" required>
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput [(ngModel)]="userDetails.Password" type="password" placeholder="Password" name="Password"
-               required>
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput [(ngModel)]="userDetails.Email" type="email" placeholder="Email" name="Email" required>
-      </mat-form-field>
-      <mat-form-field appearance="fill">
-        <mat-label>Currency Preference</mat-label>
-        <mat-select matNativeControl [(ngModel)]="userDetails.CurrencyPref" type="text" placeholder="CAD"
-                    name="CurrencyPref">
-          <mat-option value="CAD">CAD</mat-option>
-          <mat-option value="USD">USD</mat-option>
-          <mat-option value="GBP">GBP</mat-option>
-          <mat-option value="EUR">EUR</mat-option>
-        </mat-select>
-      </mat-form-field>
-    </form>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button (click)="registerUser()" color="primary">
-      Sign Up
-    </button>
-  </mat-card-actions>
-</mat-card>
+  <mat-card id="card">
+    <mat-card-header id="registerHeader">
+      <mat-card-title>Register for BillFold!</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form>
+        <mat-form-field appearance="fill" id="formField">
+          <mat-label>First Name</mat-label>
+          <input matInput [(ngModel)]="userDetails.FirstName" type="text" name="FirstName" required>
+          <button mat-icon-button matPrefix>
+            <mat-icon matPrefix>person_outline</mat-icon>
+          </button>
+        </mat-form-field>
+        <mat-form-field appearance="fill" id="formField">
+          <mat-label>Last Name</mat-label>
+          <input matInput [(ngModel)]="userDetails.LastName" type="text" name="LastName" required>
+          <button mat-icon-button matPrefix>
+            <mat-icon matPrefix>person_outline</mat-icon>
+          </button>
+        </mat-form-field>
+        <mat-form-field appearance="fill" id="formField">
+          <mat-label>Username</mat-label>
+          <input matInput [(ngModel)]="userDetails.Username" type="text" name="Username" required>
+
+          <button mat-icon-button matPrefix>
+            <mat-icon matPrefix>account_circle</mat-icon>
+          </button>
+
+        </mat-form-field>
+        <mat-form-field appearance="fill" id="formField">
+          <mat-label>Password</mat-label>
+          <input matInput [(ngModel)]="userDetails.Password" [type]="hide ? 'password' : 'text'" name="Password"
+                 required>
+
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                  [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+
+        </mat-form-field>
+        <mat-form-field appearance="fill" id="formField">
+          <mat-label>Email</mat-label>
+          <input matInput [(ngModel)]="userDetails.Email" type="email" name="Email" required>
+          <button mat-icon-button matPrefix>
+            <mat-icon matPrefix>email</mat-icon>
+          </button>
+        </mat-form-field>
+        <mat-form-field appearance="fill" id="formField">
+          <mat-label>Currency Preference</mat-label>
+          <button mat-icon-button matPrefix>
+            <mat-icon matPrefix>currency_exchange</mat-icon>
+          </button>
+          <mat-select matNativeControl [(ngModel)]="userDetails.CurrencyPref" type="text" placeholder="CAD" required
+                      name="CurrencyPref">
+            <div id="option">
+              <mat-icon id="currency" aria-hidden="true" aria-label="CAD icon" matPrefix>attach_money</mat-icon>
+              <mat-option value="CAD">
+                CAD
+              </mat-option>
+            </div>
+            <div id="option">
+              <mat-icon id="currency" aria-hidden="true" aria-label="USD icon" matPrefix>attach_money</mat-icon>
+              <mat-option value="USD">
+                USD
+              </mat-option>
+            </div>
+            <div id="option">
+              <mat-icon id="currency" aria-hidden="true" aria-label="GBP icon" matPrefix>currency_pound</mat-icon>
+              <mat-option value="GBP">
+                GBP
+              </mat-option>
+            </div>
+            <div id="option">
+              <mat-icon id="currency" aria-hidden="true" aria-label="EUR icon" matPrefix>euro_symbol</mat-icon>
+              <mat-option value="EUR">
+                EUR
+              </mat-option>
+            </div>
+          </mat-select>
+
+        </mat-form-field>
+      </form>
+    </mat-card-content>
+    <mat-card-actions id="btnActions">
+      <button mat-raised-button (click)="registerUser()" id="registerBtn">
+        <mat-icon aria-hidden="false" aria-label="Login icon">app_registration</mat-icon>
+        Register
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</div>
