--- a/src/app/user-update-password/user-update-password.component.html
+++ b/src/app/user-update-password/user-update-password.component.html
@@ -4,11 +4,22 @@
 <!-- <mat-form-field>
   <input matInput [(ngModel)]="userData.Password" placeholder={{data.Password}} type="text" name="Password" required>
 </mat-form-field> -->
-<div [formGroup]="newPassword">
-  <mat-form-field>
+<div>
+  <!-- <mat-form-field>
     <input matInput [(ngModel)]="userData.Password" placeholder="Enter new password" [type]="hide ? 'password' : 'text'"
            formControlName="password" required>
     <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+  </mat-form-field> -->
+
+  <mat-form-field appearance="fill" id="formField">
+    <mat-label>Enter new password</mat-label>
+    <input matInput [(ngModel)]="userData.Password" [type]="hide ? 'password' : 'text'" name="Password" required>
+
+    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="hide">
+      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
+
   </mat-form-field>
 
   <mat-card-actions>
