--- a/src/app/expenses-page/expenses-page.component.scss
+++ b/src/app/expenses-page/expenses-page.component.scss
@@ -1,3 +1,19 @@
+@use '@angular/material' as mat;
+
+$my-primary-palette: mat.define-palette(mat.$cyan-palette);
+$my-bg-palette: mat.define-palette(mat.$blue-gray-palette);
+$my-warn-palette: mat.define-palette(mat.$amber-palette);
+
+$font:'Raleway', sans-serif;
+$textSize: 15px;
+$headerSize: 20px;
+$bg:mat.get-color-from-palette($my-bg-palette,800);
+$headerbg: mat.get-color-from-palette($my-primary-palette, 700);
+$primary: mat.get-color-from-palette($my-primary-palette,500);
+$warn: mat.get-color-from-palette($my-warn-palette,500);
+$blue:#007ad9;
+$white: #fff;
+$bgGrey: #ebecef;
 
 h2 {
   margin: 0;
@@ -44,4 +60,8 @@ b { /* used for event dates/times */
 .fc { /* the calendar root */
   max-width: 1100px;
   margin: 0 auto;
+}
+
+#p-panel-0-content{
+  color:$white;
 }
