--- a/src/app/user-registration-form/user-registration-form.component.scss
+++ b/src/app/user-registration-form/user-registration-form.component.scss
@@ -1,6 +1,15 @@
+@use '@angular/material' as mat;
+
+$my-primary-palette: mat.define-palette(mat.$cyan-palette);
+$my-bg-palette: mat.define-palette(mat.$blue-gray-palette);
+$my-warn-palette: mat.define-palette(mat.$amber-palette);
+
 $font:'Raleway', sans-serif;
 $textSize: 15px;
 $headerSize: 20px;
+$headerbg: mat.get-color-from-palette($my-primary-palette, 700);
+$primary: mat.get-color-from-palette($my-primary-palette,500);
+$warn: mat.get-color-from-palette($my-warn-palette,500);
 $blue:#007ad9;
 $white: #fff;
 $bgGrey: #ebecef;
@@ -16,7 +25,7 @@ font-family: $font;
 margin:6px
 }
 #registerBtn{
-  background-color: $blue;
+  background-color: darken($primary,10);
   color:$white;
   font-family: $font;
   font-size: $textSize;
