correct miscellaneous  spelling

--- a/src/app/expense-create/expense-create.component.html
+++ b/src/app/expense-create/expense-create.component.html
@@ -20,7 +20,7 @@
           <mat-option value="Transportation">Transportation</mat-option>
           <mat-option value="Medical">Medical</mat-option>
           <mat-option value="Savings">Savings</mat-option>
-          <mat-option value="Micellaneous">Micellaneous</mat-option>
+          <mat-option value="Miscellaneous">Miscellaneous</mat-option>
 
         </mat-select>
 
