change cal theme and chart panel color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -242,11 +242,11 @@ body.mat-typography{
 
 .p-component{
         font-family: $font;
-        font-size: large;
+        // font-size: large;
 }
 
 .p-panel .p-panel-header{
-        background-color: darken($headerbg,10);
+        background-color: darken($primary,10);
         font-family: $font;
         font-size: $headerSize;
 }
